--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
 body {
     text-align: center;
-}
-
-.logo {
-    width:10px;
-    height:10px;
-    margin:auto auto;
+    background: #ffffff url('../images/geometry2.png');
 }
